--- a/src/app/app-layout.html
+++ b/src/app/app-layout.html
@@ -16,6 +16,9 @@
       <a routerLink="/contact" routerLinkActive="active">
         Contact
       </a>
+      <a routerLink="/cart" routerLinkActive="active">
+        Cart ({{ cartCount }})
+      </a>
       <a routerLink="/admin/dashboard" routerLinkActive="active">
         Admin
       </a>
